--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,3 @@
-$purple: #9b50ba;
-$blue:   #3498db;
-$green:  #2ecc71;
-$yellow: #f1c40f;
 
 
 
@@ -22,18 +18,7 @@ $yellow: #f1c40f;
 	}
 }
 
-.loading{
-	background-color: $green;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 600px;
-	line-height: 600px;
-	text-align: center;
-	color: white;
-	font-size: 2rem;
-}
+
 
 .slider{
 	background-color: white;
@@ -63,7 +48,7 @@ $yellow: #f1c40f;
 	position: absolute;
 	top: 0;
 	height: 100%;
-	background-color: $yellow;
+	background-image: url(bg.png);
 	background-visibility: hidden;
 	
 	transition-timing-function: cubic-bezier(.25,.5,.25,1.25);
@@ -81,15 +66,15 @@ $yellow: #f1c40f;
 	}
 	
 	&:nth-child(2n){
-		background-color: $green;
+		background-image: url(bg.png);
 	}
 	
 	&:nth-child(3n){
-		background-color: $blue;
+		background-image: url(bg.png);
 	}
 	
 	&:nth-child(4n){
-		background-color: $purple;
+		background-image: url(bg.png);
 	}
 }
 
